# IRC

./: AUTHORS  MAINTAINERS  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main  main.c  main.vala
src/.deps/: main.Po
